--- a/massage/onepage-static.html
+++ b/massage/onepage-static.html
@@ -173,10 +173,7 @@
                     <div class="col-md-12">
                         <div class="owl-carousel image-slider o-flow-hidden">
                             <div class="item">
-                                <img alt="" src="img/portfolio/39.jpg" />
-                            </div>
-                            <div class="item">
-                                <img alt="" src="img/portfolio/41.jpg" />
+                                <img alt="" src="img/portfolio/44.jpg" />
                             </div>
                             <div class="item">
                                 <img alt="" src="img/portfolio/47.jpg" />
@@ -185,19 +182,85 @@
                                 <img alt="" src="img/portfolio/49.jpg" />
                             </div>
                             <div class="item">
-                                <img alt="" src="img/portfolio/52.jpg" />
+                                <img alt="" src="img/portfolio/55.jpg" />
                             </div>
                             <div class="item">
-                                <img alt="" src="img/portfolio/74.jpg" />
+                                <img alt="" src="img/portfolio/56.jpg" />
                             </div>
                             <div class="item">
-                                <img alt="" src="img/portfolio/80.jpg" />
+                                <img alt="" src="img/portfolio/63.jpg" />
+                            </div>
+                            <div class="item">
+                                <img alt="" src="img/portfolio/66.jpg" />
+                            </div>
+                            <div class="item">
+                                <img alt="" src="img/portfolio/68.jpg" />
+                            </div>
+                            <div class="item">
+                                <img alt="" src="img/portfolio/71.jpg" />
+                            </div>
+                            <div class="item">
+                                <img alt="" src="img/portfolio/73.jpg" />
+                            </div>
+                            <div class="item">
+                                <img alt="" src="img/portfolio/78.jpg" />
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+        <!-- End Image Slider-->
+
+        <!--Image Slider-->
+        <!--<section class="ptb-sm-80 ptb">-->
+            <!--<div class="container">-->
+                <!--<h3 class="text-center">Фотогаллерея</h3>-->
+                <!--<div class="spacer-30"></div>-->
+                <!--<div class="row">-->
+                    <!--<div class="col-md-12">-->
+                        <!--<div class="owl-carousel image-slider o-flow-hidden">-->
+                            <!--<div class="item">-->
+                                <!--<img alt="" src="img/portfolio/44.jpg" />-->
+                            <!--</div>-->
+                            <!--<div class="item">-->
+                                <!--<img alt="" src="img/portfolio/46.jpg" />-->
+                            <!--</div>-->
+                            <!--<div class="item">-->
+                                <!--<img alt="" src="img/portfolio/48.jpg" />-->
+                            <!--</div>-->
+                            <!--<div class="item">-->
+                                <!--<img alt="" src="img/portfolio/50.jpg" />-->
+                            <!--</div>-->
+                            <!--<div class="item">-->
+                                <!--<img alt="" src="img/portfolio/53.jpg" />-->
+                            <!--</div>-->
+                            <!--<div class="item">-->
+                                <!--<img alt="" src="img/portfolio/63.jpg" />-->
+                            <!--</div>-->
+                            <!--<div class="item">-->
+                                <!--<img alt="" src="img/portfolio/65.jpg" />-->
+                            <!--</div>-->
+                            <!--<div class="item">-->
+                                <!--<img alt="" src="img/portfolio/66.jpg" />-->
+                            <!--</div>-->
+                            <!--<div class="item">-->
+                                <!--<img alt="" src="img/portfolio/40.jpg" />-->
+                            <!--</div>-->
+                            <!--<div class="item">-->
+                                <!--<img alt="" src="img/portfolio/72.jpg" />-->
+                            <!--</div>-->
+                            <!--<div class="item">-->
+                                <!--<img alt="" src="img/portfolio/75.jpg" />-->
+                            <!--</div>-->
+                            <!--<div class="item">-->
+                                <!--<img alt="" src="img/portfolio/79.jpg" />-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</section>-->
         <!-- End Image Slider-->
 
         <!-- Testimonials -->
