--- a/massage/onepage-static.html
+++ b/massage/onepage-static.html
@@ -468,12 +468,9 @@
                         <div class="contact-box-left mb-45">
                             <div class="contact-icon-left"><i class="ion ion-ios-location"></i></div>
                             <h6>Адрес</h6>
-                            <p>
-                                5023, DieSachbearbeiter, Schönhauser Allee,<br />
-                                0000 Сочи, Germany.
-                            </p>
-                            <a href="mailto:yourname@domain.com"><i class="fa fa-envelope-o left"></i>info@massashka.ru</a><br />
-                            <a><i class="fa fa-phone left"></i>+8 (918) 918-23-32‬</a>
+                            <p>г. Сочи</p>
+                            <a><i class="fa fa-phone left"></i>+8 (918) 918-23-32‬</a><br />
+                            <a href="mailto:yourname@domain.com"><i class="fa fa-envelope-o left"></i>info@massashka.ru</a>
                         </div>
                         <div class="contact-box-left mb-45">
                             <div class="contact-icon-left"><i class="ion ion-ios-clock"></i></div>
