--- a/massage/onepage-static.html
+++ b/massage/onepage-static.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Mazel - Multiprapose Html template</title>
+    <title>Массажист Александр Жерновой</title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <meta name="author" content="nileforest">
@@ -396,8 +396,12 @@
                         <div id="a5" class="accordion-section">
                             <h6 class="accordion-title">Висцеральный массаж</h6>
                             <div class="accordion-content">
-                                <p class="lead">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur?</p>
-                                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quas.</p>
+                                <p>
+                                    Висцеральный массаж - это массаж внутренних органов, который представляет собой глубокое воздействие на определенные внутренние системы и ткани организма.
+                                    Такое воздействие еще называют висцеральной хиропрактикой. Массажист через переднюю брюшную стенку имеет возможность оказывать на органы
+                                    различные типы воздействия: надавливающие, вибрационные, массажные и сдвигающие. Все это позволяет пациенту почувствовать
+                                    прилив сил и бодрости, улучшить кровообращение, стимулировать мышечное сокращение.
+                                </p>
                                 <p>
                                     <strong class="dark-color">Продолжительность:</strong> 1 час
                                 </p>
@@ -424,8 +428,12 @@
                         <div class="accordion-section">
                             <h6 class="accordion-title">Массаж лица</h6>
                             <div class="accordion-content">
-                                <p class="lead">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur?</p>
-                                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quas.</p>
+                                <p>
+                                    Массаж лица включает в себя работу с ТМО (твёрдой мозговой оболочкой), через воздействие на БЗО (большое затылочное отверстие).
+                                    Этот же подход позволяет убрать, или заметно подтянуть второй подбородок. Через ТМО и БЗО можно подтягивать обвисшие мышцы лица.
+                                    Так же работа с лицом включает в себя работу с костями черепа, глазами, ушами, носом. Весь комплекс позволяет значительно улучшить
+                                    внешний вид, подтянуть мышцы, придать коже лица тонус, вернуть свежесть и молодость.
+                                </p>
                                 <p>
                                     <strong class="dark-color">Продолжительность:</strong> 1 час
                                 </p>
@@ -459,7 +467,6 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 text-center">
                         <h3>Контакты</h3>
-                        <!--<p class="lead">Nullam dictum felis eu pede mollis pretium leo eget bibendum sodales augue velit cursus. tellus eget condimentum rhoncus sem quam semper libero.</p>-->
                     </div>
                 </div>
                 <div class="spacer-75"></div>
