--- a/massage/onepage-static.html
+++ b/massage/onepage-static.html
@@ -74,10 +74,10 @@
                 <div class="js-fullscreen-height container">
                     <div class="intro-content">
                         <div class="intro-content-inner">
-                            <div class="row">
-                                <p class="lead col-md-6 col-md-offset-3">Массажист-кинезиолог</p>
-                            </div>
                             <h2 class="h2">Александр Жерновой</h2>
+                            <div class="row">
+                                <p class="lead col-md-6 col-md-offset-3">Массажист от Бога</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -212,59 +212,8 @@
         </section>
         <!-- End Image Slider-->
 
-        <!--Image Slider-->
-        <!--<section class="ptb-sm-80 ptb">-->
-            <!--<div class="container">-->
-                <!--<h3 class="text-center">Фотогаллерея</h3>-->
-                <!--<div class="spacer-30"></div>-->
-                <!--<div class="row">-->
-                    <!--<div class="col-md-12">-->
-                        <!--<div class="owl-carousel image-slider o-flow-hidden">-->
-                            <!--<div class="item">-->
-                                <!--<img alt="" src="img/portfolio/44.jpg" />-->
-                            <!--</div>-->
-                            <!--<div class="item">-->
-                                <!--<img alt="" src="img/portfolio/46.jpg" />-->
-                            <!--</div>-->
-                            <!--<div class="item">-->
-                                <!--<img alt="" src="img/portfolio/48.jpg" />-->
-                            <!--</div>-->
-                            <!--<div class="item">-->
-                                <!--<img alt="" src="img/portfolio/50.jpg" />-->
-                            <!--</div>-->
-                            <!--<div class="item">-->
-                                <!--<img alt="" src="img/portfolio/53.jpg" />-->
-                            <!--</div>-->
-                            <!--<div class="item">-->
-                                <!--<img alt="" src="img/portfolio/63.jpg" />-->
-                            <!--</div>-->
-                            <!--<div class="item">-->
-                                <!--<img alt="" src="img/portfolio/65.jpg" />-->
-                            <!--</div>-->
-                            <!--<div class="item">-->
-                                <!--<img alt="" src="img/portfolio/66.jpg" />-->
-                            <!--</div>-->
-                            <!--<div class="item">-->
-                                <!--<img alt="" src="img/portfolio/40.jpg" />-->
-                            <!--</div>-->
-                            <!--<div class="item">-->
-                                <!--<img alt="" src="img/portfolio/72.jpg" />-->
-                            <!--</div>-->
-                            <!--<div class="item">-->
-                                <!--<img alt="" src="img/portfolio/75.jpg" />-->
-                            <!--</div>-->
-                            <!--<div class="item">-->
-                                <!--<img alt="" src="img/portfolio/79.jpg" />-->
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</section>-->
-        <!-- End Image Slider-->
-
         <!-- Testimonials -->
-        <section id="testimonial" class="overlay-dark80 dark-bg ptb ptb-sm-80" style="background-image: url('img/full/43.jpg'); background-position-x: center" data-stellar-background-ratio="0.2">
+        <section id="testimonial" class="overlay-dark80 dark-bg ptb ptb-sm-80" style="background-image: url('img/full/45.jpg'); background-position-x: center" data-stellar-background-ratio="0.2">
             <div class="container">
                 <div class="owl-carousel testimonial-carousel nf-carousel-theme white">
                     <div class="item">
@@ -288,25 +237,25 @@
                             <h6 class="quote-author">Восточная мудрость</h6>
                         </div>
                     </div>
-                    <!--<div class="item">-->
-                    <!--<div class="testimonial text-center dark-color">-->
-                    <!--<div class="container-icon"><i class="fa fa-quote-right"></i></div>-->
-                    <!--<p class="lead">«Позаботьтесь о своем теле, чтоб душе хотелось в нем жить, обращайтесь к массажисту».</p>-->
-                    <!--<h6 class="quote-author">Народная мудрость</h6>-->
-                    <!--</div>-->
-                    <!--</div>-->
+                    <div class="item">
+                        <div class="testimonial text-center dark-color">
+                            <div class="container-icon"><i class="fa fa-quote-right"></i></div>
+                            <p class="lead">«Массажисты как музыканты, изучившие одни и те же ноты, но создающие абсолютно разную музыку: один напишет джаз, второй - классику, а третий - что-то совершенно новое».</p>
+                            <h6 class="quote-author">Габриель Аскуль</h6>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="testimonial text-center dark-color">
+                            <div class="container-icon"><i class="fa fa-quote-right"></i></div>
+                            <p class="lead">«Позаботьтесь о своем теле, чтоб душе хотелось в нем жить, обращайтесь к массажисту».</p>
+                            <h6 class="quote-author">Народная мудрость</h6>
+                        </div>
+                    </div>
                     <!--<div class="item">-->
                     <!--<div class="testimonial text-center dark-color">-->
                     <!--<div class="container-icon"><i class="fa fa-quote-right"></i></div>-->
                     <!--<p class="lead">«Массаж во врачевании во все времена играл огромную роль, люди давно должны были поставить памятник массажистам».</p>-->
                     <!--<h6 class="quote-author">Cаркизов-Серазини</h6>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="item">-->
-                    <!--<div class="testimonial text-center dark-color">-->
-                    <!--<div class="container-icon"><i class="fa fa-quote-right"></i></div>-->
-                    <!--<p class="lead">«Массажисты как музыканты, изучившие одни и те же ноты, но создающие абсолютно разную музыку: один напишет джаз, второй - классику, а третий - что-то совершенно новое».</p>-->
-                    <!--<h6 class="quote-author">Габриель Аскуль</h6>-->
                     <!--</div>-->
                     <!--</div>-->
                 </div>
