--- a/massage/index.html
+++ b/massage/index.html
@@ -134,28 +134,6 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="item">
-                            <div class="nf-col-padding">
-                                <div class="item-box">
-                                    <div class="shop-item">
-                                        <div class="item-img">
-                                            <img src="img/c1.jpg" />
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="nf-col-padding">
-                                <div class="item-box">
-                                    <div class="shop-item">
-                                        <div class="item-img">
-                                            <img src="img/c1.jpg" />
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -213,7 +191,7 @@
         <!-- End Image Slider-->
 
         <!-- Testimonials -->
-        <section id="testimonial" class="overlay-dark80 dark-bg ptb ptb-sm-80" style="background-image: url('img/full/45.jpg'); background-position-x: center" data-stellar-background-ratio="0.2">
+        <section id="testimonial" class="overlay-dark80 dark-bg ptb ptb-sm-80" style="background-image: url('img/portfolio/45.jpg'); background-position-x: center" data-stellar-background-ratio="0.2">
             <div class="container">
                 <div class="owl-carousel testimonial-carousel nf-carousel-theme white">
                     <div class="item">
@@ -226,15 +204,15 @@
                     <div class="item">
                         <div class="testimonial text-center dark-color">
                             <div class="container-icon"><i class="fa fa-quote-right"></i></div>
-                            <p class="lead">«Цель массажа - уничтожить бесполезные вещества, обнаруженные в мышцах, которые не были выведены из организма физическими упражнениями».</p>
-                            <h6 class="quote-author">Авиценна</h6>
+                            <p class="lead">«Больному и несчастному человеку массаж нужен, а здоровому и счастливому — необходим».</p>
+                            <h6 class="quote-author">Восточная мудрость</h6>
                         </div>
                     </div>
                     <div class="item">
                         <div class="testimonial text-center dark-color">
                             <div class="container-icon"><i class="fa fa-quote-right"></i></div>
-                            <p class="lead">«Больному и несчастному человеку массаж нужен, а здоровому и счастливому — необходим».</p>
-                            <h6 class="quote-author">Восточная мудрость</h6>
+                            <p class="lead">«Цель массажа - уничтожить бесполезные вещества, обнаруженные в мышцах, которые не были выведены из организма физическими упражнениями».</p>
+                            <h6 class="quote-author">Авиценна</h6>
                         </div>
                     </div>
                     <div class="item">
@@ -403,7 +381,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-sm-8">
-                        <h4 class="">Воспользуйтесь формой обратной связи, чтобы мы могли связаться с Вами и ответить на все Ваши вопросы.</h4>
+                        <h4 class="">Воспользуйтесь формой обратной связи, чтобы я мог связаться с Вами и ответить на все Ваши вопросы.</h4>
                     </div>
                 </div>
             </div>
@@ -432,9 +410,9 @@
                             <div class="contact-icon-left"><i class="ion ion-ios-clock"></i></div>
                             <h6>Рабочее время</h6>
                             <p>
-                                <span>Пн. - Пт.: 9:00 - 19:00</span>
+                                <span>Пн. - Пт.: 9:00 - 20:00</span>
                                 <br />
-                                <span>Сб.: 9:00 - 19:00</span>
+                                <span>Сб.: 9:00 - 20:00</span>
                             </p>
                         </div>
                     </div>
@@ -463,7 +441,7 @@
                             </div>
 
                             <div class="form-field-wrapper">
-                                <input class="input-sm form-full" id="form-tel" type="text" name="form-email" placeholder="Телефон">
+                                <input class="input-sm form-full" id="form-tel" type="tel" name="form-tel" placeholder="Телефон">
                             </div>
 
                             <div class="form-field-wrapper">
@@ -535,7 +513,6 @@
     <script src="js/plugin/jquery.singlePageNav.js" type="text/javascript"></script>
     <script src="js/contact-form.js" type="text/javascript"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
-    <script type="text/javascript" src="js/map.js"></script>
 
     <script type="text/javascript">
         //  Onepage Nav Elements
