Update and rename massage/index.html to массаж/index.html

--- a/массаж/index.html
+++ b/массаж/index.html
@@ -74,10 +74,10 @@
                 <div class="js-fullscreen-height container">
                     <div class="intro-content">
                         <div class="intro-content-inner">
-                            <h2 class="h2">Александр Жерновой</h2>
                             <div class="row">
-                                <p class="lead col-md-6 col-md-offset-3">Массажист от Бога</p>
+                                <p class="lead col-md-6 col-md-offset-3">Массажист-кинезиолог </p>
                             </div>
+                            <h2 class="h2">Александр Жерновой</h2>
                         </div>
                     </div>
                 </div>
